--- a/reports/stochastic_monitor_210906.html
+++ b/reports/stochastic_monitor_210906.html
@@ -55,6 +55,7 @@
             <br>
             <button onclick="toggleElements('#indices', '.stochastic')"> Global Indices </button>
             <button onclick="toggleElements('#equities', '.stochastic')"> Global Equities </button>
+            <button onclick="toggleElements('#reits', '.stochastic')"> Global REITs </button>
             <button onclick="toggleElements('#bonds', '.stochastic')"> Global Bonds </button>
             <button onclick="toggleElements('#commods', '.stochastic')"> Commodities </button>
             <button onclick="toggleElements('#cryptos', '.stochastic')"> Cryptocurrencies </button>
@@ -78,6 +79,18 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>^VIX</th>
+      <td>16.41</td>
+      <td>20.92</td>
+      <td>23.30</td>
+      <td>Bearish</td>
+      <td>2021-09-03</td>
+      <td>15.61</td>
+      <td>15.60</td>
+      <td>Very Bullish</td>
+      <td>2021-09-03</td>
+    </tr>
     <tr>
       <th>KWEB</th>
       <td>52.69</td>
@@ -113,18 +126,6 @@
       <td>28.22</td>
       <td>Very Bullish</td>
       <td>2021-08-24</td>
-    </tr>
-    <tr>
-      <th>^VIX</th>
-      <td>16.41</td>
-      <td>20.92</td>
-      <td>23.30</td>
-      <td>Bearish</td>
-      <td>2021-09-03</td>
-      <td>15.61</td>
-      <td>15.60</td>
-      <td>Very Bullish</td>
-      <td>2021-09-03</td>
     </tr>
     <tr>
       <th>ASHR</th>
@@ -210,18 +211,6 @@
   </thead>
   <tbody>
     <tr>
-      <th>0700.HK</th>
-      <td>488.00</td>
-      <td>30.23</td>
-      <td>25.42</td>
-      <td>Very Bullish</td>
-      <td>2021-09-03</td>
-      <td>39.87</td>
-      <td>32.23</td>
-      <td>Bullish</td>
-      <td>2021-08-24</td>
-    </tr>
-    <tr>
       <th>ADBE</th>
       <td>666.59</td>
       <td>94.24</td>
@@ -231,6 +220,18 @@
       <td>86.21</td>
       <td>87.28</td>
       <td>Very Bearish</td>
+      <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>UNH</th>
+      <td>422.86</td>
+      <td>71.90</td>
+      <td>72.56</td>
+      <td>Bearish</td>
+      <td>2021-09-03</td>
+      <td>44.38</td>
+      <td>44.33</td>
+      <td>Bullish</td>
       <td>2021-09-02</td>
     </tr>
     <tr>
@@ -244,6 +245,18 @@
       <td>63.62</td>
       <td>Bullish</td>
       <td>2021-08-31</td>
+    </tr>
+    <tr>
+      <th>0700.HK</th>
+      <td>505.00</td>
+      <td>30.23</td>
+      <td>25.42</td>
+      <td>Very Bullish</td>
+      <td>2021-09-03</td>
+      <td>39.87</td>
+      <td>32.23</td>
+      <td>Bullish</td>
+      <td>2021-08-24</td>
     </tr>
     <tr>
       <th>TSM</th>
@@ -282,18 +295,6 @@
       <td>2021-08-20</td>
     </tr>
     <tr>
-      <th>UNH</th>
-      <td>422.86</td>
-      <td>71.90</td>
-      <td>72.56</td>
-      <td>Bearish</td>
-      <td>2021-09-03</td>
-      <td>44.38</td>
-      <td>44.33</td>
-      <td>Bullish</td>
-      <td>2021-09-02</td>
-    </tr>
-    <tr>
       <th>UNP</th>
       <td>214.91</td>
       <td>43.90</td>
@@ -315,6 +316,18 @@
       <td>25.39</td>
       <td>24.86</td>
       <td>Very Bullish</td>
+      <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>FB</th>
+      <td>376.26</td>
+      <td>76.38</td>
+      <td>75.49</td>
+      <td>Bullish</td>
+      <td>2021-08-27</td>
+      <td>80.38</td>
+      <td>81.31</td>
+      <td>Very Bearish</td>
       <td>2021-09-02</td>
     </tr>
     <tr>
@@ -366,16 +379,16 @@
       <td>2021-08-25</td>
     </tr>
     <tr>
-      <th>FB</th>
-      <td>376.26</td>
-      <td>76.38</td>
-      <td>75.49</td>
-      <td>Bullish</td>
-      <td>2021-08-27</td>
-      <td>80.38</td>
-      <td>81.31</td>
-      <td>Very Bearish</td>
-      <td>2021-09-02</td>
+      <th>BA</th>
+      <td>218.17</td>
+      <td>37.98</td>
+      <td>42.16</td>
+      <td>Bearish</td>
+      <td>2021-08-20</td>
+      <td>48.51</td>
+      <td>49.94</td>
+      <td>Bearish</td>
+      <td>2021-09-03</td>
     </tr>
     <tr>
       <th>ILMN</th>
@@ -388,18 +401,6 @@
       <td>27.95</td>
       <td>Bullish</td>
       <td>2021-09-02</td>
-    </tr>
-    <tr>
-      <th>BA</th>
-      <td>218.17</td>
-      <td>37.98</td>
-      <td>42.16</td>
-      <td>Bearish</td>
-      <td>2021-08-20</td>
-      <td>48.51</td>
-      <td>49.94</td>
-      <td>Bearish</td>
-      <td>2021-09-03</td>
     </tr>
     <tr>
       <th>MMM</th>
@@ -474,18 +475,6 @@
       <td>2021-08-26</td>
     </tr>
     <tr>
-      <th>V</th>
-      <td>225.11</td>
-      <td>74.96</td>
-      <td>81.73</td>
-      <td>Very Bearish</td>
-      <td>2021-08-06</td>
-      <td>39.60</td>
-      <td>39.78</td>
-      <td>Bearish</td>
-      <td>2021-08-30</td>
-    </tr>
-    <tr>
       <th>JPM</th>
       <td>159.49</td>
       <td>38.90</td>
@@ -522,6 +511,18 @@
       <td>2021-09-01</td>
     </tr>
     <tr>
+      <th>V</th>
+      <td>225.11</td>
+      <td>74.96</td>
+      <td>81.73</td>
+      <td>Very Bearish</td>
+      <td>2021-08-06</td>
+      <td>39.60</td>
+      <td>39.78</td>
+      <td>Bearish</td>
+      <td>2021-08-30</td>
+    </tr>
+    <tr>
       <th>AMZN</th>
       <td>3478.05</td>
       <td>59.80</td>
@@ -532,18 +533,6 @@
       <td>19.67</td>
       <td>Very Bullish</td>
       <td>2021-08-23</td>
-    </tr>
-    <tr>
-      <th>ASML</th>
-      <td>858.11</td>
-      <td>81.95</td>
-      <td>80.67</td>
-      <td>Bullish</td>
-      <td>2021-07-23</td>
-      <td>50.75</td>
-      <td>46.19</td>
-      <td>Bullish</td>
-      <td>2021-08-20</td>
     </tr>
     <tr>
       <th>BABA</th>
@@ -558,6 +547,18 @@
       <td>2021-08-24</td>
     </tr>
     <tr>
+      <th>ASML</th>
+      <td>858.11</td>
+      <td>81.95</td>
+      <td>80.67</td>
+      <td>Bullish</td>
+      <td>2021-07-23</td>
+      <td>50.75</td>
+      <td>46.19</td>
+      <td>Bullish</td>
+      <td>2021-08-20</td>
+    </tr>
+    <tr>
       <th>PG</th>
       <td>144.05</td>
       <td>58.35</td>
@@ -570,18 +571,6 @@
       <td>2021-09-01</td>
     </tr>
     <tr>
-      <th>ACN</th>
-      <td>343.33</td>
-      <td>71.15</td>
-      <td>62.19</td>
-      <td>Bullish</td>
-      <td>2021-07-02</td>
-      <td>85.14</td>
-      <td>84.23</td>
-      <td>Bullish</td>
-      <td>2021-08-25</td>
-    </tr>
-    <tr>
       <th>CME</th>
       <td>195.30</td>
       <td>69.15</td>
@@ -592,6 +581,18 @@
       <td>39.02</td>
       <td>Bearish</td>
       <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>ACN</th>
+      <td>343.33</td>
+      <td>71.15</td>
+      <td>62.19</td>
+      <td>Bullish</td>
+      <td>2021-07-02</td>
+      <td>85.14</td>
+      <td>84.23</td>
+      <td>Bullish</td>
+      <td>2021-08-25</td>
     </tr>
     <tr>
       <th>EL</th>
@@ -646,6 +647,161 @@
             <br>
             </div>
 
+            <div class="stochastic" id="reits" style="display: none;">
+            <h2> Global REITs </h2>
+            <table id="reits_table">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Last_Price</th>
+      <th>Weekly_%K(9,3)</th>
+      <th>Weekly_%D(3)</th>
+      <th>Weekly_Remarks</th>
+      <th>Weekly_Timestamp</th>
+      <th>Daily_%K(9,3)</th>
+      <th>Daily_%D(3)</th>
+      <th>Daily_Remarks</th>
+      <th>Daily_Timestamp</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>AJBU.SI</th>
+      <td>2.54</td>
+      <td>45.93</td>
+      <td>50.40</td>
+      <td>Bearish</td>
+      <td>2021-08-27</td>
+      <td>22.23</td>
+      <td>20.45</td>
+      <td>Very Bullish</td>
+      <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>A17U.SI</th>
+      <td>3.11</td>
+      <td>67.43</td>
+      <td>70.72</td>
+      <td>Bearish</td>
+      <td>2021-08-27</td>
+      <td>37.59</td>
+      <td>31.14</td>
+      <td>Bullish</td>
+      <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>C38U.SI</th>
+      <td>2.09</td>
+      <td>48.78</td>
+      <td>59.68</td>
+      <td>Bearish</td>
+      <td>2021-08-20</td>
+      <td>32.24</td>
+      <td>23.97</td>
+      <td>Very Bullish</td>
+      <td>2021-09-02</td>
+    </tr>
+    <tr>
+      <th>C2PU.SI</th>
+      <td>4.90</td>
+      <td>77.16</td>
+      <td>75.73</td>
+      <td>Bullish</td>
+      <td>2021-08-20</td>
+      <td>54.17</td>
+      <td>51.83</td>
+      <td>Bullish</td>
+      <td>2021-08-30</td>
+    </tr>
+    <tr>
+      <th>ME8U.SI</th>
+      <td>2.91</td>
+      <td>77.83</td>
+      <td>83.00</td>
+      <td>Very Bearish</td>
+      <td>2021-08-13</td>
+      <td>53.29</td>
+      <td>54.86</td>
+      <td>Bearish</td>
+      <td>2021-09-06</td>
+    </tr>
+    <tr>
+      <th>M44U.SI</th>
+      <td>2.11</td>
+      <td>82.67</td>
+      <td>84.69</td>
+      <td>Very Bearish</td>
+      <td>2021-08-06</td>
+      <td>23.90</td>
+      <td>21.72</td>
+      <td>Very Bullish</td>
+      <td>2021-09-01</td>
+    </tr>
+    <tr>
+      <th>K71U.SI</th>
+      <td>1.09</td>
+      <td>53.07</td>
+      <td>55.48</td>
+      <td>Bearish</td>
+      <td>2021-08-06</td>
+      <td>16.80</td>
+      <td>15.05</td>
+      <td>Very Bullish</td>
+      <td>2021-09-01</td>
+    </tr>
+    <tr>
+      <th>AU8U.SI</th>
+      <td>1.32</td>
+      <td>52.94</td>
+      <td>62.64</td>
+      <td>Bearish</td>
+      <td>2021-08-06</td>
+      <td>18.75</td>
+      <td>14.41</td>
+      <td>Very Bullish</td>
+      <td>2021-08-25</td>
+    </tr>
+    <tr>
+      <th>N2IU.SI</th>
+      <td>2.08</td>
+      <td>73.04</td>
+      <td>73.41</td>
+      <td>Bearish</td>
+      <td>2021-07-30</td>
+      <td>29.94</td>
+      <td>24.59</td>
+      <td>Very Bullish</td>
+      <td>2021-09-01</td>
+    </tr>
+    <tr>
+      <th>BWCU.SI</th>
+      <td>0.81</td>
+      <td>74.47</td>
+      <td>85.13</td>
+      <td>Very Bearish</td>
+      <td>2021-07-23</td>
+      <td>27.09</td>
+      <td>25.61</td>
+      <td>Very Bullish</td>
+      <td>2021-08-30</td>
+    </tr>
+    <tr>
+      <th>BUOU.SI</th>
+      <td>1.53</td>
+      <td>63.20</td>
+      <td>52.13</td>
+      <td>Bullish</td>
+      <td>2021-07-09</td>
+      <td>66.80</td>
+      <td>62.45</td>
+      <td>Bullish</td>
+      <td>2021-09-02</td>
+    </tr>
+  </tbody>
+</table>
+            <br>
+            </div>
+
             <div class="stochastic" id="bonds" style="display: none;">
             <h2> Global Bonds </h2>
             <table id="bonds_table">
@@ -665,18 +821,6 @@
   </thead>
   <tbody>
     <tr>
-      <th>BNDX</th>
-      <td>57.61</td>
-      <td>84.52</td>
-      <td>85.21</td>
-      <td>Very Bearish</td>
-      <td>2021-08-27</td>
-      <td>43.71</td>
-      <td>54.97</td>
-      <td>Bearish</td>
-      <td>2021-08-25</td>
-    </tr>
-    <tr>
       <th>EMB</th>
       <td>113.18</td>
       <td>73.19</td>
@@ -687,6 +831,18 @@
       <td>81.53</td>
       <td>Very Bearish</td>
       <td>2021-09-03</td>
+    </tr>
+    <tr>
+      <th>BNDX</th>
+      <td>57.61</td>
+      <td>84.52</td>
+      <td>85.21</td>
+      <td>Very Bearish</td>
+      <td>2021-08-27</td>
+      <td>43.71</td>
+      <td>54.97</td>
+      <td>Bearish</td>
+      <td>2021-08-25</td>
     </tr>
     <tr>
       <th>SHY</th>
@@ -713,14 +869,14 @@
       <td>2021-08-27</td>
     </tr>
     <tr>
-      <th>LQD</th>
-      <td>134.99</td>
-      <td>77.81</td>
-      <td>83.83</td>
+      <th>TLT</th>
+      <td>148.18</td>
+      <td>74.29</td>
+      <td>77.61</td>
       <td>Very Bearish</td>
       <td>2021-08-06</td>
-      <td>59.74</td>
-      <td>63.46</td>
+      <td>45.71</td>
+      <td>52.10</td>
       <td>Bearish</td>
       <td>2021-09-03</td>
     </tr>
@@ -737,14 +893,14 @@
       <td>2021-09-03</td>
     </tr>
     <tr>
-      <th>TLT</th>
-      <td>148.18</td>
-      <td>74.29</td>
-      <td>77.61</td>
+      <th>LQD</th>
+      <td>134.99</td>
+      <td>77.81</td>
+      <td>83.83</td>
       <td>Very Bearish</td>
       <td>2021-08-06</td>
-      <td>45.71</td>
-      <td>52.10</td>
+      <td>59.74</td>
+      <td>63.46</td>
       <td>Bearish</td>
       <td>2021-09-03</td>
     </tr>
@@ -796,18 +952,6 @@
       <td>2021-08-24</td>
     </tr>
     <tr>
-      <th>COMT</th>
-      <td>34.83</td>
-      <td>66.32</td>
-      <td>62.63</td>
-      <td>Bullish</td>
-      <td>2021-09-03</td>
-      <td>46.36</td>
-      <td>37.56</td>
-      <td>Bullish</td>
-      <td>2021-08-24</td>
-    </tr>
-    <tr>
       <th>DBC</th>
       <td>19.33</td>
       <td>65.39</td>
@@ -816,6 +960,18 @@
       <td>2021-09-03</td>
       <td>44.57</td>
       <td>36.07</td>
+      <td>Bullish</td>
+      <td>2021-08-24</td>
+    </tr>
+    <tr>
+      <th>COMT</th>
+      <td>34.83</td>
+      <td>66.32</td>
+      <td>62.63</td>
+      <td>Bullish</td>
+      <td>2021-09-03</td>
+      <td>46.36</td>
+      <td>37.56</td>
       <td>Bullish</td>
       <td>2021-08-24</td>
     </tr>
@@ -892,7 +1048,7 @@
   <tbody>
     <tr>
       <th>ADA-USD</th>
-      <td>2.88</td>
+      <td>2.85</td>
       <td>39.73</td>
       <td>32.29</td>
       <td>Bullish</td>
@@ -904,7 +1060,7 @@
     </tr>
     <tr>
       <th>LTC-USD</th>
-      <td>224.81</td>
+      <td>222.52</td>
       <td>23.92</td>
       <td>18.47</td>
       <td>Very Bullish</td>
@@ -916,7 +1072,7 @@
     </tr>
     <tr>
       <th>XRP-USD</th>
-      <td>1.29</td>
+      <td>1.36</td>
       <td>22.07</td>
       <td>18.44</td>
       <td>Very Bullish</td>
@@ -928,7 +1084,7 @@
     </tr>
     <tr>
       <th>BCH-USD</th>
-      <td>731.17</td>
+      <td>784.94</td>
       <td>23.42</td>
       <td>17.03</td>
       <td>Very Bullish</td>
@@ -940,7 +1096,7 @@
     </tr>
     <tr>
       <th>ETH-USD</th>
-      <td>3928.22</td>
+      <td>3934.19</td>
       <td>39.24</td>
       <td>29.04</td>
       <td>Very Bullish</td>
@@ -951,20 +1107,8 @@
       <td>2021-08-30</td>
     </tr>
     <tr>
-      <th>BTC-USD</th>
-      <td>50339.15</td>
-      <td>24.64</td>
-      <td>20.46</td>
-      <td>Very Bullish</td>
-      <td>2021-07-23</td>
-      <td>57.51</td>
-      <td>53.97</td>
-      <td>Bullish</td>
-      <td>2021-09-01</td>
-    </tr>
-    <tr>
       <th>BNB-USD</th>
-      <td>498.90</td>
+      <td>498.89</td>
       <td>28.71</td>
       <td>28.21</td>
       <td>Bullish</td>
@@ -973,6 +1117,18 @@
       <td>54.76</td>
       <td>Bullish</td>
       <td>2021-09-03</td>
+    </tr>
+    <tr>
+      <th>BTC-USD</th>
+      <td>51676.46</td>
+      <td>24.64</td>
+      <td>20.46</td>
+      <td>Very Bullish</td>
+      <td>2021-07-23</td>
+      <td>57.51</td>
+      <td>53.97</td>
+      <td>Bullish</td>
+      <td>2021-09-01</td>
     </tr>
   </tbody>
 </table>
